--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ff8fb2" />
-  <title>MafiaCats – Game (Overvallen met XP)</title>
+  <title>MafiaCats – Game (Overvallen in modal)</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -39,7 +39,7 @@
 
   <!-- Layout -->
   <main class="flex-1 max-w-7xl mx-auto w-full p-3 md:p-4 grid lg:grid-cols-[320px_1fr_320px] gap-3 md:gap-4 overflow-hidden" style="height:calc(100vh - 56px)">
-    <!-- Left: Character + Tiles -->
+    <!-- Left: Character + Actieknoppen -->
     <aside class="flex flex-col gap-3 md:gap-4 overflow-hidden">
       <div class="panel p-4 sticky top-3">
         <div class="flex items-center gap-3">
@@ -63,19 +63,19 @@
             <button id="nextDay" class="btn px-3 py-2 rounded-lg bg-pink-500 text-white">Volgende dag</button>
             <button id="restBtn" class="btn px-3 py-2 rounded-lg bg-black/5 hover:bg-black/10">Rust</button>
           </div>
+
+          <!-- Actie: Overvallen (opent modal) -->
+          <div class="mt-3">
+            <button id="openHeists" class="btn w-full px-4 py-3 rounded-xl bg-[var(--accent)] hover:bg-[var(--accent-600)] text-white">
+              Overvallen
+            </button>
+          </div>
         </div>
       </div>
 
-      <!-- Overvallen -->
-      <section class="panel p-3 md:p-4 overflow-auto">
-        <div class="flex items-center justify-between mb-2">
-          <h2 class="font-semibold">Overvallen</h2>
-          <span class="pill">Ervaring verhoogt je slagingskans</span>
-        </div>
-        <ul class="space-y-2 text-sm" id="heistList"></ul>
-      </section>
+      <!-- (VERVALLEN) Overvallen-lijst stond hier; nu vervangen door de knop hierboven -->
 
-      <!-- Werk -->
+      <!-- Werk blijft als tegel -->
       <section class="panel p-3 md:p-4 overflow-auto">
         <h2 class="font-semibold mb-2">Werk</h2>
         <ul class="space-y-2 text-sm" id="workList"></ul>
@@ -121,6 +121,26 @@
     </aside>
   </main>
 
+  <!-- MODAL: Overvallen -->
+  <div id="heistModal" class="fixed inset-0 hidden items-center justify-center p-4 z-50">
+    <!-- backdrop -->
+    <div class="absolute inset-0 bg-black/60"></div>
+    <!-- panel -->
+    <div class="relative w-full max-w-2xl panel p-0 overflow-hidden">
+      <div class="flex items-center justify-between px-4 py-3 border-b border-pink-200">
+        <h3 class="font-bold">Overvallen</h3>
+        <button id="closeHeists" class="btn px-3 py-1.5 rounded-lg bg-black/5 hover:bg-black/10">Sluiten</button>
+      </div>
+      <div class="p-4">
+        <p class="text-sm text-black/70 mb-3">
+          Begin bovenaan bij de makkelijke doelen. Elke poging geeft <b>XP</b> — meer XP = hogere <b>slagingskans</b>.
+          Items zoals de <i>laserpen</i> helpen ook. Let op je <b>energie</b> en <b>honden-alert</b>!
+        </p>
+        <ul id="heistModalList" class="space-y-2 text-sm"></ul>
+      </div>
+    </div>
+  </div>
+
   <script>
     const $=(s,r=document)=>r.querySelector(s); const $$=(s,r=document)=>Array.from(r.querySelectorAll(s));
     const SAVE_KEY='mafiacats_save_v3';
@@ -153,7 +173,7 @@
       $('#day').textContent=state.day; $('#rank').textContent=rank(); $('#enBar').style.width=clamp(state.en)+'%'; $('#heatBar').style.width=clamp(state.heat)+'%';
       $('#hudCash').textContent=state.cash; $('#hudHP').textContent=state.hp; $('#hudEN').textContent=state.en+'%'; $('#hudHeat').textContent=state.heat+'%'; $('#hudRep').textContent=state.rep;
       $('#charName').value=state.name||'';
-      renderHeists(); renderWork(); renderInv();
+      renderWork(); renderInv();
     }
 
     function rank(){ const R=[{n:'Kittenspion',r:0},{n:'Straatkat',r:30},{n:'Klapkat',r:80},{n:'Miauwster',r:150},{n:'Katerbaas',r:250},{n:'Oude wijze poes',r:400},{n:'Don Purrino',r:700}]; let cur=R[0].n; for(const r of R){ if(state.rep>=r.r) cur=r.n; else break;} return cur; }
@@ -178,10 +198,10 @@
       const roll = rng();
       if(roll < chance){
         const gain = h.payout[0] + Math.floor(rng() * (h.payout[1]-h.payout[0]+1));
-        addCash(gain); addRep(h.rep); addHeat(h.heatS); state.xp.heist[key]=(state.xp.heist[key]||0)+3; // +3 XP bij succes
+        addCash(gain); addRep(h.rep); addHeat(h.heatS); state.xp.heist[key]=(state.xp.heist[key]||0)+3; // succes: +3 XP
         log(`✅ ${h.emoji} Succes: ${h.name}. +${gain} blikvoer, +${h.rep} purr, +alert.`);
       } else {
-        addHP(-h.hpF); addHeat(h.heatF); state.xp.heist[key]=(state.xp.heist[key]||0)+1; // +1 XP bij falen
+        addHP(-h.hpF); addHeat(h.heatF); state.xp.heist[key]=(state.xp.heist[key]||0)+1; // falen: +1 XP
         log(`❌ Mislukt: ${h.name}. −${h.hpF} leven, +alert.`);
       }
       update(); check();
@@ -192,7 +212,7 @@
       if(!spend(w.cost)) return;
       const base = w.payout[0]; const extra = Math.floor(rng()*(w.payout[1]-w.payout[0]+1));
       const xp = (state.xp.work[w.key]||0);
-      const bonus = Math.floor(xp*0.05); // klein +1 per 20 XP
+      const bonus = Math.floor(xp*0.05); // +1 per 20 XP ongeveer
       addCash(base+extra+bonus); addRep(w.rep); if(w.heat) addHeat(w.heat);
       state.xp.work[w.key]=(state.xp.work[w.key]||0)+2;
       log(`${w.emoji} Werk: ${w.name}. +${base+extra+bonus} blikvoer${w.heat? ", +alert":""}.`);
@@ -204,8 +224,10 @@
       const r=rng(); if(r<.15){ const fine=2+Math.floor(rng()*6); addCash(-fine); addHeat(3); log(`🐕 Boete: −${fine} blikvoer (+alert)`);} else if(r<.28){ const find=2+Math.floor(rng()*6); addCash(find); log(`🎁 Je vond ${find} blikvoer in een doos.`);} else if(r<.34){ addHP(-1); log('🛁 Je viel in de badkuip. −1 leven.'); }
       update(); check(); }
 
-    function renderHeists(){
-      const ul=$('#heistList'); ul.innerHTML='';
+    // ---------- Renderers ----------
+    function renderHeists(ulId='heistModalList'){
+      const ul = document.getElementById(ulId); if(!ul) return;
+      ul.innerHTML='';
       HEISTS.forEach(h=>{
         const xp = state.xp.heist[h.key]||0; const ch=heistChance(h);
         const li=document.createElement('li'); li.className='flex items-center gap-3 bg-pink-50 rounded-xl px-3 py-2 border border-pink-100';
@@ -223,7 +245,7 @@
         `;
         ul.appendChild(li);
       });
-      $$('[data-heist]').forEach(b=> b.addEventListener('click', ()=> doHeist(b.getAttribute('data-heist'))));
+      $$('[data-heist]', document.getElementById(ulId)).forEach(b=> b.addEventListener('click', ()=> doHeist(b.getAttribute('data-heist'))));
     }
 
     function renderWork(){
@@ -259,19 +281,29 @@
       $$('[data-use]').forEach(b=> b.addEventListener('click',()=>useItem(b.getAttribute('data-use'))));
     }
 
+    // ---------- Items, log, meldingen ----------
     function buy(item){ const prices={kruid:3,laser:5,muis:6,halsband:8}; if(state.cash<prices[item]) return toast('Niet genoeg blikvoer'); addCash(-prices[item]); state.items[item]++; log(`🛍️ Gekocht: ${item}.`); update(); }
     function useItem(item){ if(state.items[item]<=0) return toast('Je hebt dat item niet'); if(item==='kruid'){ state.items.kruid--; state.en=clamp(state.en+12); log('🌿 Kattenkruid: +12 energie.'); } else if(item==='muis'){ state.items.muis--; addHP(1); log('🧸 Pluche muis: +1 leven.'); } else if(item==='halsband'){ state.items.halsband--; addHeat(-15); log('💍 Halsband: −15% alert.'); } update(); }
-
     function log(t){ const d=document.createElement('div'); d.className='bg-white border border-pink-200/60 rounded px-3 py-2'; d.textContent=t; $('#log').prepend(d); }
     function check(){ if(state.hp<=0) log('🚑 Dierenambulance… GAME OVER.'); if(state.heat>=100) log('🚓 Te veel honden-alert! GAME OVER.'); }
     function toast(msg){ const t=document.createElement('div'); t.className='fixed bottom-4 left-1/2 -translate-x-1/2 bg-black/80 text-white px-3 py-2 rounded-xl text-sm'; t.textContent=msg; document.body.appendChild(t); setTimeout(()=>t.remove(),1400); }
 
+    // ---------- Modal open/dicht ----------
+    const modal = $('#heistModal');
+    function openHeistModal(){ modal.classList.remove('hidden'); modal.classList.add('flex'); renderHeists('heistModalList'); }
+    function closeHeistModal(){ modal.classList.add('hidden'); modal.classList.remove('flex'); $('#heistModalList').innerHTML=''; }
+    $('#openHeists').addEventListener('click', openHeistModal);
+    $('#closeHeists').addEventListener('click', closeHeistModal);
+    modal.addEventListener('click', (e)=>{ if(e.target===modal) closeHeistModal(); }); // klik buiten paneel = sluiten
+
+    // ---------- Bindings ----------
     $$('[data-buy]').forEach(b=> b.addEventListener('click', ()=> buy(b.getAttribute('data-buy'))));
     $('#nextDay').addEventListener('click', nextDay); $('#restBtn').addEventListener('click', rest);
     $('#saveBtn').addEventListener('click', save); $('#resetBtn').addEventListener('click', reset);
     $('#charName').addEventListener('input',e=>{ state.name=e.target.value; });
 
-    update(); if(!load()) log('Welkom! Overvallen geven XP → hogere kans. Begin bovenaan bij de visboer. 🐾');
+    // Init
+    update(); if(!load()) log('Welkom! Klik op Overvallen om te beginnen. XP verhoogt je kans. 🐾');
   </script>
 </body>
 </html>
